--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "@types/socket.io-client": "^3.0.0",
     "daisyui": "^2.51.3",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
